--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -8,7 +8,7 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
-<style>
+{% comment %} <style>
 .flex-container {
   display: flex;
   flex-wrap: wrap; 
@@ -54,9 +54,9 @@
     flex: 100%;
   }
 }
-</style>
+</style> {% endcomment %}
 {% endblock %}
-{% block title %} Events | Hack For Change {% endblock %}
+{% block title %} Ongoing Events | Hack For Change {% endblock %}
 
 {% block main %}
 <!--Banner start -->
