--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link type="text/css" rel="stylesheet" href="{% static 'css/style_custom.css' %}" />
+    <link type="text/css" rel="stylesheet" href="{% static 'css/flexbox.css' %}" />
     <script type="text/javascript" src="{% static 'js/modernizr.min.js' %}"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="192x192" href="{% static 'images/android-chrome-192x192.png' %}">
