Problem List Page Reorganised

--- a/static/css/flexbox.css
+++ b/static/css/flexbox.css
@@ -67,3 +67,28 @@
     }
   }
 
+
+  .flex-item-problem-bottom-left {
+    flex: 32%;
+
+    
+  }
+  
+  .flex-item-problem-bottom-middle {
+    flex: 47%;
+    margin-bottom: 10px;
+    
+  }
+  
+  .flex-item-problem-bottom-right {
+    flex: 21%;
+
+    
+  }
+  
+  @media (max-width: 800px) {
+    .flex-item-probelm-bottom-right, .flex-item-problem-bottom-left, .flex-item-problem-bottom-middle  {
+      flex: 100%;
+    }
+  }
+
