--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -7,30 +7,10 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 
-{% comment %} <style>
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .flex-item-l-event-detail {
-    flex: 60%;
-  }
-  
-  .flex-item-r-event-detail {
-    flex: 40%;
-  }
+<style>
 
 
-
-  /* Responsive layout - makes a one column layout instead of a two-column layout */
-@media (max-width: 800px) {
-  .flex-item-r-event-detail, .flex-item-l-event-detail{
-    flex: 100%;
-  }
-}
-
-</style> {% endcomment %}
+</style> 
 <meta property="og:url" content="">
 {% endblock %}
 {% block title %} {{event.title}} | Hack For Change {% endblock %}
