--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -30,14 +30,31 @@
             <section id="contents">
                 {% for prob_list in problems_list %}
                 <article class="post-blog">
+                <div class="flex-container">
+                    <div class="flex-item-top-left">
                     <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.problem_statement|safe}}</a></h4>
-                    <p>{{prob_list.overview|safe}}</p>
-                    <div class="badge-sec badge-sec__alt"><strong>Status: </strong><span class="badge">{{prob_list.status}}</span></div>
-                    <div class="badge-sec"><strong>Submitted By: </strong><span class="badge badge--yellow">{% if prob_list.partner_id %}{{prob_list.partner_id}}{%endif%}</span>
-                        <strong>Issue Areas: </strong><span style="text-transform: capitalize;"> {{prob_list.issuearea}}</span>
                     </div>
-                    <a class="btn btn--border" href="{% url 'problem_discription' prob_list.title_slug %}">View
-                        Details</a>
+                    <div class="flex-item-top-right">
+                    <div class="badge-sec"><strong>Status: </strong><span class="badge">{{prob_list.status}}</span></div>
+                    </div>
+                    </div>
+                    <p>{{prob_list.overview|safe}}</p>
+                    <div class="flex-container">
+                        <div class="flex-item-problem-bottom-left">
+                            <div class="badge-sec"><strong>Submitted By: </strong><span class="badge badge--yellow">{% if prob_list.partner_id %}{{prob_list.partner_id}}{%endif%}</span></div>
+                            
+                        </div>
+                        <div class="flex-item-problem-bottom-middle">
+                            <strong>Issue Areas: </strong><span style="text-transform: capitalize;"> {{prob_list.issuearea}}</span> <br>
+                                   
+                        </div>
+                 
+                        <div class="flex-item-problem-bottom-right" >
+                            <div><a class="btn btn--border" href="{% url 'problem_discription' prob_list.title_slug %}">View Details</a></div>
+                        </div>
+                    </div>
+
+
                 </article>
                 {% endfor %}
             </section>
