--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -31,7 +31,14 @@
             <section id="contents">
                 {% for projects_list in projects_list  %}
                 <article class="post-blog">
-                    <h4>{{projects_list.name}}</h4>
+                    <div class="flex-container">
+                    <div class="flex-item-top-left">
+                    <h4><a href="{% url 'project_detail' projects_list.project_slug  %}">{{projects_list.name|safe}}</a></h4>
+                    </div>
+                    <div class="flex-item-top-right" >
+                    <div class="badge-sec"><strong></strong><span class="badge">{{projects_list.status}}</span></div>
+                    </div>
+                    </div>
                     <p>{{projects_list.project_overview}}</p>
                     <a class="btn btn--border" href="{% url 'project_detail' projects_list.project_slug  %}">Learn More</a>
                 </article>
