--- a/templates/EventsEngine/event_signup.html
+++ b/templates/EventsEngine/event_signup.html
@@ -12,16 +12,42 @@
 
 {% block main %}
 <!--Banner start -->
-<div class="banner-wrap">
-    <div class="content-width sm-content-width">
-        <div class="banner__main">
-            <h1>{{event.title}}</h1>
-            <p class="large">
-                {{event.start_date|date:"F j, o"}} - {{event.end_date|date:"F j, o"}}
-            </p>
+    {% if event.banner %}
+        {% if event.banner_color == "Light" %}
+        <div class="banner-wrap" style="background-image: url('{{event.banner.url}}')";>
+            <div class="content-width sm-content-width">
+                <div class="banner__main">
+                    <h1>{{event.title}}</h1>
+                    <p class="large">
+                        {{event.start_date|date:"F j, o"}} - {{event.end_date|date:"F j, o"}}
+                    </p>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+        {% else %}
+        <div class="banner-wrap" style="color: white; background-image: url('{{event.banner.url}}')";>
+            <div class="content-width sm-content-width">
+                <div class="banner__main">
+                    <h1>{{event.title}}</h1>
+                    <p class="large">
+                        {{event.start_date|date:"F j, o"}} - {{event.end_date|date:"F j, o"}}
+                    </p>
+                </div>
+            </div>
+        </div>
+        {% endif %}  
+        {% else %}
+        <div class="banner-wrap">
+            <div class="content-width sm-content-width">
+                <div class="banner__main">
+                    <h1>{{event.title}}</h1>
+                    <p class="large">
+                        {{event.start_date|date:"F j, o"}} - {{event.end_date|date:"F j, o"}}
+                    </p>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 <!--Banner end -->
 <!--main start -->
 <div id="main-wrap" class="main__large-pd">
