--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -41,7 +41,7 @@
                     <p>{{prob_list.overview|safe}}</p>
                     <div class="flex-container">
                         <div class="flex-item-problem-bottom-left">
-                            <strong>Submitted By </strong><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img width="50" src={{prob_list.partner_id.logo.url}} alt="Logo">
+                            <strong>Submitted By </strong><br><span>{{prob_list.partner_id}}</span> <br>
                         </div>
                         <div class="flex-item-problem-bottom-middle">
                             <strong>Issue Areas <br></strong><span> {{prob_list.issuearea}}</span> <br>        
