Added Reply to option in internal email

--- a/templates/EventsEngine/event_participant_detail_internal_email.html
+++ b/templates/EventsEngine/event_participant_detail_internal_email.html
@@ -17,7 +17,8 @@
             <p>Profession: {{contributor.profession}}</p>
             <p>Years of experience: {{contributor.years_of_experience}}</p>
             <p>Skills: {{contributor.areaofexpertise}}</p>
-              
+            <p>Email: {{contributor.email}}</p>
+               
           </td>
         </tr>
       <!-- END MAIN CONTENT AREA -->
