--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -51,7 +51,8 @@
                         </div>
                         <div class="flex-item-project-bottom-middle-right">
                             {% if projects_list.website_link %}
-                            <strong><a href="{{projects_list.website_link}}">View Live<a/> <br></strong><span></span> <br>  
+                            <strong>Source Code </strong><span></span> <br>
+                            <strong><a href="{{projects_list.website_link}}">Github<a/> <br></strong><span></span>  
                             {% endif %}      
                         </div>
                         <div class="flex-item-project-bottom-right" >
