--- a/templates/HFC/community_center.html
+++ b/templates/HFC/community_center.html
@@ -36,8 +36,9 @@
             <section id="contents">
                 {% if center.logo %}
                     <div class="uni-chapter"><img width="84px" src={{center.logo.url}}></div>
+                    <div class="uni-chapter"><img width="84px" src="{% static 'images/hfc-small.png' %}"><h2>{{center.organization_name}} Leaderboard</h2></div>
                 {% else %}
-                    <div class="uni-chapter"><img width="84px" src="{% static 'images/hfc-small.png' %}"><h2>{{center.type}} Leaderboard</h2></div>
+                    <div class="uni-chapter"><img width="84px" src="{% static 'images/hfc-small.png' %}"><h2>{{center.organization_name}} Leaderboard</h2></div>
                 {% endif %}
                 <section id="hfcLeaderboard">
                 <div class="unborder-table__outer">
