--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -50,12 +50,20 @@
                     <div class="flex-container">
                         <div class="flex-item-bottom-left">
                             <div ><strong>Start </strong></div>
-                            <div ><span >{{events_list.start_date|date:"F j, o"}}</span></div>
+                            {% if events_list.event_type|stringformat:"s" == "Webinar" %}
+                            <div ><span >{{events_list.start_date|date:"M jS, f A"}}  </span></div>
+                            {% else %}
+                            <div ><span >{{events_list.start_date|date:"F jS, o"}}</span></div>
+                            {% endif %}
                             <br>
                         </div>
                             <div class="flex-item-bottom-middle-left">
                              <div ><strong>End </strong></div>
-                            <div ><span>{{events_list.end_date|date:"F j, o"}}</span></div>
+                            {% if events_list.event_type|stringformat:"s" == "Webinar" %}
+                            <div ><span >{{events_list.end_date|date:"f A"}}</span></div>
+                            {% else %}
+                            <div ><span>{{events_list.end_date|date:"F jS, o"}}</span></div>
+                            {% endif %}
                             <br>
                         </div>
                             <div class="flex-item-bottom-right">
