Community Page tabs #262

--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -53,7 +53,7 @@
                             <li class="{% if url_name == 'projects' %}active{% endif %}">
                                 <a href="{% url 'projects' %}">Projects</a></li>
                             <li class="{% if url_name == 'community' %}active{% endif %}">
-                                <a href="{% url 'community' %}">Community</a></li>
+                                <a href="{% url 'community' %}#Centres">Community</a></li>
                             <li class="{% if url_name == 'andablog' %}active{% endif %}">
                                 <a href="{% url 'blog' %}">Blog</a></li>
                             <li class="menu__hasChild"><a href="{% url 'about' %}">About</a>
