Added Resolution Banner req in admin

--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -8,7 +8,7 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
-<link rel="alternate" type="application/rss+xml" title="Updates on the HFC Events" href="https://www.hackforchange.co.in/events/latest/feed/" />
+<link rel="alternate" type="application/rss+xml" title="Updates on the HFC Events" href="https://staging.hackforchange.co.in/events/latest/feed/" />
 {% endblock %}
 {% block title %} Ongoing Events | Hack For Change {% endblock %}
 
