Added Calendar Links #269 #264

--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -18,6 +18,7 @@
         <div class="banner__main">
             <h1>Ongoing Events</h1>
             <p class="large">Ongoing events and workshops to empower community</p>
+            <button class="btn btn--info" onclick="location.href='https://calendar.google.com/calendar/u/2?cid=Y19wYWFzaG5mZGw4N3ZzZzdsMDExbjE1bXZxc0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t';">Subscribe to events</button>
         </div>
     </div>
 </div>
