--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -75,6 +75,12 @@
                             src="{% static 'images/discord-img.png' %}" alt="Icon"></a></li>
 
                 </ul>
+                <ul>
+                    <li><a href="https://calendar.google.com/calendar/u/2?cid=Y19wYWFzaG5mZGw4N3ZzZzdsMDExbjE1bXZxc0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"><img width="34"
+                            src="{% static 'images/calendar-img.png' %}" alt="Icon"></a></li>
+
+
+                </ul>
                 <a href="{% url 'donate' %}" class="btn btn--border">Donate</a>
             </div>
         </footer>
