Changed Date/Time format in webinar #275

--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -28,7 +28,7 @@
                     <p class="large">{{event.event_type}}</p>
                     <p class="large">
                             {% if event.event_type|stringformat:"s" == "Webinar" %}
-                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"f A"}}
+                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"F jS, f A"}}
                             {% else %}
                             {{event.start_date|date:"F jS, o"}} - {{event.end_date|date:"F jS, o"}}
                             {% endif %}
@@ -44,7 +44,7 @@
                     <p class="large">{{event.event_type}}</p>
                     <p class="large">
                             {% if event.event_type|stringformat:"s" == "Webinar" %}
-                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"f A"}}
+                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"F jS, f A"}}
                             {% else %}
                             {{event.start_date|date:"F jS, o"}} - {{event.end_date|date:"F jS, o"}}
                             {% endif %}
@@ -61,7 +61,7 @@
                     <p class="large">{{event.event_type}}</p>
                     <p class="large">
                             {% if event.event_type|stringformat:"s" == "Webinar" %}
-                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"f A"}}
+                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"F jS, f A"}}
                             {% else %}
                             {{event.start_date|date:"F jS, o"}} - {{event.end_date|date:"F jS, o"}}
                             {% endif %}
