--- a/templates/EventsEngine/event_signup.html
+++ b/templates/EventsEngine/event_signup.html
@@ -20,7 +20,7 @@
                     <h1>{{event.title}}</h1>
                     <p class="large">
                             {% if event.event_type|stringformat:"s" == "Webinar" %}
-                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"f A"}}
+                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"F jS, f A"}}
                             {% else %}
                             {{event.start_date|date:"F j, o"}} - {{event.end_date|date:"F j, o"}}
                             {% endif %}
@@ -35,7 +35,7 @@
                     <h1>{{event.title}}</h1>
                     <p class="large">
                             {% if event.event_type|stringformat:"s" == "Webinar" %}
-                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"f A"}}
+                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"F jS, f A"}}
                             {% else %}
                             {{event.start_date|date:"F j, o"}} - {{event.end_date|date:"F j, o"}}
                             {% endif %}
@@ -51,7 +51,7 @@
                     <h1>{{event.title}}</h1>
                     <p class="large">
                             {% if event.event_type|stringformat:"i" == Webinar|stringformat:"i" %}
-                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"f A"}}
+                            {{event.start_date|date:"F jS, f A"}} - {{event.end_date|date:"F jS, f A"}}
                             {% else %}
                             {{event.start_date|date:"F j, o"}} - {{event.end_date|date:"F j, o"}}
                             {% endif %}
