Changed font size of suscription button

--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="fb:app_id" content="{{FB_APP_ID}}" />
-    <link rel="alternate" type="application/rss+xml" title="Updates on the HFC Events" href="https://www.hackforchange.co.in/events/latest/feed/" />
-    <link rel="alternate" type="application/rss+xml" title="Updates on the HFC Blogs" href="https://www.hackforchange.co.in/blog/latest/feed/" />
+    <link rel="alternate" type="application/rss+xml" title="HackForChange Events" href="https://www.hackforchange.co.in/events/latest/feed/" />
+    <link rel="alternate" type="application/rss+xml" title="HackForChange Blogs" href="https://www.hackforchange.co.in/blog/latest/feed/" />
     {% block meta_tags %}
     {% endblock %}
     <title>{% block title %} {% endblock %}</title>
