--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -18,7 +18,7 @@
         <div class="banner__main">
             <h1>Ongoing Events</h1>
             <p class="large">Ongoing events and workshops to empower community</p>
-            <a class="btn btn--info" href="https://calendar.google.com/calendar/u/2?cid=Y19wYWFzaG5mZGw4N3ZzZzdsMDExbjE1bXZxc0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t" target ="blank">Get Notified / Subscribe to events</a>
+            <a class="btn btn--info" href="https://calendar.google.com/calendar/u/2?cid=Y19wYWFzaG5mZGw4N3ZzZzdsMDExbjE1bXZxc0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t" >Subscribe to events</a>
         </div>
     </div>
 </div>
