--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li><a href="https://twitter.com/HackForChangeIN"><img width="31"
                             src="{% static 'images/twitter-img.png' %}" alt="Icon"></a></li>
-                    <li><a href="https://calendar.google.com/calendar/u/2?cid=Y19wYWFzaG5mZGw4N3ZzZzdsMDExbjE1bXZxc0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"><img width="31"
+                    <li><a href="https://calendar.google.com/calendar/u/0/embed?src=c_paashnfdl87vsg7l011n15mvqs@group.calendar.google.com&ctz=Asia/Kolkata" target="blank"><img width="31"
                             src="{% static 'images/calendar-img.png' %}" alt="Icon"></a></li>
                     <li><a href="https://discord.gg/mnSrEBvXct"><img width="31"
                             src="{% static 'images/discord-img.png' %}" alt="Icon"></a></li>
